--- a/Server Maker Pro/Server Maker Pro.csproj
+++ b/Server Maker Pro/Server Maker Pro.csproj
@@ -14,4 +14,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Modrinth.Net" Version="3.5.1" />
+  </ItemGroup>
+
 </Project>
